Issue #3054304 by alonaoneill: Dependency namespacing in .info.yml file

--- a/content_moderation_bypass.info.yml
+++ b/content_moderation_bypass.info.yml
@@ -4,4 +4,4 @@ description: 'Add a permission to bypass all transition state restrictions and s
 core: 8.x
 package: 'Content moderation'
 dependencies:
-  - content_moderation
+  - drupal:content_moderation
