--- a/content_moderation_bypass.info.yml
+++ b/content_moderation_bypass.info.yml
@@ -2,6 +2,7 @@ name: 'Content Moderation Bypass'
 type: module
 description: 'Add a permission to bypass all transition state restrictions and set content to any state.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Content moderation'
 dependencies:
   - drupal:content_moderation
